chore: associate .css files with Tailwind extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "cSpell.words": ["DBML", "roboto", "varchar"]
+  "cSpell.words": ["DBML", "roboto", "varchar"],
+  "files.associations": {
+    "*.css": "tailwindcss"
+  }
 }
