--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:unit": "vitest",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "json-server": "json-server --watch db.json --port 3000",
+    "json-server": "json-server db.json --port 3000",
     "vite": "vite",
     "dev": "concurrently \"npm run json-server\" \"npm run vite\""
   },
