--- a/package.json
+++ b/package.json
@@ -1,47 +1,51 @@
 {
-  "name": "collateral-documents-frontend",
+  "name": "budgetrack",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest",
+    "build": "npm run build --workspace=frontend",
+    "test": "npm run test --workspaces",
+    "test:frontend": "npm run test:watch --workspace=frontend",
+    "test:backend": "npm run test:watch --workspace=backend",
+    "test:shared": "npm run test:watch --workspace=shared",
+    "test:coverage": "npm run test:coverage --workspaces",
+    "test:coverage:frontend": "npm run test:coverage:watch --workspace=frontend",
+    "test:coverage:backend": "npm run test:coverage:watch --workspace=backend",
+    "test:coverage:shared": "npm run test:coverage:watch --workspace=shared",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/",
+    "lint:frontend": "eslint . --fix frontend",
+    "lint:backend": "eslint . --fix backend",
+    "lint:shared": "eslint . --fix shared",
     "json-server": "json-server db.json --port 3000",
-    "vite": "vite",
-    "dev": "concurrently \"npm run json-server\" \"npm run vite\""
+    "dev": "concurrently \"npm run json-server\" \"npm run dev --workspace=frontend\""
   },
-  "dependencies": {
-    "fast-deep-equal": "^3.1.3",
-    "pinia": "^3.0.3",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
-  },
+  "workspaces": [
+    "backend",
+    "frontend",
+    "shared"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.23.0",
-    "@tailwindcss/vite": "^4.1.6",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/coverage-v8": "^3.1.1",
-    "@vitest/eslint-plugin": "^1.1.44",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/eslint-plugin": "^1.3.4",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/test-utils": "^2.4.6",
     "concurrently": "^9.1.2",
     "eslint": "^9.26.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-jsdoc": "^52.0.4",
     "eslint-plugin-prettier": "^5.2.5",
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
     "json-server": "^1.0.0-beta.3",
-    "tailwindcss": "^4.1.6",
-    "vite": "^6.2.0",
-    "vite-plugin-vue-devtools": "^7.7.2",
-    "vite-svg-loader": "^5.1.0",
     "vitest": "^3.1.1"
+  },
+  "dependencies": {
+    "@budgetrack/shared": "^1.0.0",
+    "dotenv": "^17.2.1",
+    "http-status-codes": "^2.3.0"
   }
 }
