--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "#repositories/*": "./src/repositories/*",
     "#routes/*": "./src/routes/*",
     "#services/*": "./src/services/*",
-    "#utils/*": "./src/utils/*"
+    "#utils/*": "./src/utils/*",
+    "#src/*": "./src/src/*"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
