--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collateral-documents-frontend",
+  "name": "budgetrack-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,20 +10,22 @@
     "test:coverage": "vitest --no-watch --coverage",
     "test:coverage:watch": "vitest --coverage",
     "lint": "cd .. && npm run lint:frontend",
-    "dev": "vite"
+    "dev": "vite",
+    "json-server": "json-server db.json --port 3000"
   },
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
     "pinia": "^3.0.3",
-    "vite": "^6.3.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.6",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4.1.6",
-    "vite-plugin-vue-devtools": "^7.7.2",
+    "vite": "^7.1.1",
+    "vite-plugin-vue-devtools": "^8.0.0",
     "vite-svg-loader": "^5.1.0"
   }
 }
