chore: add import aliases for frontend

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,7 +1,16 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "#base/*": ["./src/components/base/*"],
+      "#budget/*": ["./src/components/budget/*"],
+      "#config/*": ["./src/config/*"],
+      "#layouts/*": ["./src/layouts/*"],
+      "#services/*": ["./src/services/*"],
+      "#stores/*": ["./src/stores/*"],
+      "#ui/*": ["./src/components/ui/*"],
+      "#utils/*": ["./src/utils/*"],
+      "#views/*": ["./src/views/*"]
     }
   }
 }
