--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,17 @@
     "dev": "vite",
     "json-server": "json-server db.json --port 3000"
   },
+  "imports": {
+    "#base/*": "./src/components/base/*",
+    "#budget/*": "./src/components/budget/*",
+    "#config/*": "./src/config/*",
+    "#layouts/*": "./src/layouts/*",
+    "#services/*": "./src/services/*",
+    "#stores/*": "./src/stores/*",
+    "#ui/*": "./src/components/ui/*",
+    "#utils/*": "./src/utils/*",
+    "#views/*": "./src/views/*"
+  },
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
     "pinia": "^3.0.3",
