chore: fix import path

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,8 @@
     "#repositories/*": "./src/repositories/*",
     "#routes/*": "./src/routes/*",
     "#services/*": "./src/services/*",
-    "#utils/*": "./src/utils/*",
-    "#src/*": "./src/src/*"
+    "#src/*": "./src/*",
+    "#utils/*": "./src/utils/*"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
