--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "mssql": "^11.0.1",
     "pino": "^9.8.0",
     "pino-pretty": "^13.1.1",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.25"
   }
 }
