--- a/backend/package.json
+++ b/backend/package.json
@@ -25,12 +25,12 @@
     "#utils/*": "./src/utils/*"
   },
   "dependencies": {
+    "better-sqlite3": "^11.10.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mssql": "^11.0.1",
     "pino": "^9.8.0",
     "pino-pretty": "^13.1.1",
-    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.25"
   }
 }
