refactor: build out API, fix shared deps, and clean up config

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "#utils/*": "./src/utils/*"
   },
   "dependencies": {
+    "shared": "file:../shared",
     "better-sqlite3": "^11.10.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
