--- a/backend/jsconfig.json
+++ b/backend/jsconfig.json
@@ -14,7 +14,8 @@
       "#routes/*": ["src/routes/*"],
       "#services/*": ["src/services/*"],
       "#src/*": ["src/src/*"],
-      "#utils/*": ["src/utils/*"]
+      "#utils/*": ["src/utils/*"],
+      "#shared/*": ["../shared/src/*"]
     }
   },
   "include": ["server.js", "src/*", "src/**/*"]
