--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"],
       "#base/*": ["./src/components/base/*"],
       "#budget/*": ["./src/components/budget/*"],
       "#config/*": ["./src/config/*"],
       "#layouts/*": ["./src/layouts/*"],
       "#services/*": ["./src/services/*"],
+      "#shared/*": ["../shared/src/*"],
       "#stores/*": ["./src/stores/*"],
       "#ui/*": ["./src/components/ui/*"],
       "#utils/*": ["./src/utils/*"],
