--- a/shared/jsconfig.json
+++ b/shared/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
-      "#text/*": ["./src/text/*"]
+      "#text/*": ["./src/text/*"],
+      "#shared/*": ["./src/*"]
     }
   }
 }
