--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
+    "lightningcss": "^1.30.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
