--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,10 @@
     "#controllers/*": "./src/controllers/*",
     "#errors/*": "./src/errors/*",
     "#middlewares/*": "./src/middlewares/*",
-    "#models/*": "./src/models/*",
+    "#registries/*": "./src/registries/*",
     "#repositories/*": "./src/repositories/*",
     "#routes/*": "./src/routes/*",
+    "#schemas/*": "./src/schemas/*",
     "#services/*": "./src/services/*",
     "#src/*": "./src/*",
     "#utils/*": "./src/utils/*"
