--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
-name: budget
+name: budgetrack
 services:
-  budget:
-    container_name: ${SVC}
+  budgetrack:
+    container_name: budgetrack
     env_file:
       - .env
     networks:
@@ -13,10 +13,9 @@ services:
     restart: always
     labels:
       - traefik.enable=true
-      - traefik.docker.network=proxy
-      - traefik.http.routers.budget.entryPoints=https
-      - traefik.http.routers.budget.tls=true
-      - traefik.http.routers.budget.middlewares=default@file
+      - traefik.http.routers.budgetrack.entryPoints=https
+      - traefik.http.routers.budgetrack.tls=true
+      - traefik.http.routers.budgetrack.middlewares=default@file
 
 networks:
   proxy:
