--- a/package.json
+++ b/package.json
@@ -52,8 +52,6 @@
     "vitest": "^3.1.1"
   },
   "dependencies": {
-    "@budgetrack/shared": "^1.0.0",
-    "chalk": "^5.6.0",
-    "http-status-codes": "^2.3.0"
+    "@budgetrack/shared": "^1.0.0"
   }
 }
